# pyproject.toml
# some advices from: https://realpython.com/pypi-publish-python-package/

[build-system]
requires=["setuptools", "wheel"]
build-backend="setuptools.build_meta"

[project]
name="cxxbuild"
version="1.6.1"
description="CxxBuild is a python script to easily build C++ programs: just invoke 'cxxbuild' and it works!"
readme="README.md"
authors=[{ name="Igor Machado Coelho", email="igormcoelho@proton.me" }]
license={ file="LICENSE" }
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords=["build", "cplusplus", "dependencies", "cxxdeps", "cmake", "bazel"]
dependencies=["toml", "packaging"]
requires-python=">=3.9"

[project.optional-dependencies]
dev=["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage="https://github.com/manydeps/cxxbuild"

[project.scripts]
cxxbuild="cxxbuild:main"
