cmake_minimum_required(VERSION 3.27)
project(my-project LANGUAGES CXX VERSION 0.0.1)
set (CMAKE_CXX_STANDARD 20)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)
set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
Include(FetchContent)
add_executable(demo1 src/demo1.cpp)
add_library(my_headers0 INTERFACE)
target_include_directories(my_headers0 INTERFACE include/)
target_link_libraries(demo1 PRIVATE my_headers0)