bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "daae6f40adfa5fdb7c89684cbe4d88b691c63b2d",
)
# bazel run @hedron_compile_commands//:refresh_all
#
bazel_dep(name = "fmt", version = "9.1.0")
bazel_dep(name = "catch2", dev_dependency=True)
git_override(
    module_name = "catch2",
    remote = "https://github.com/catchorg/Catch2.git",
    commit = "f981c9cbcac07a2690e5a86767eba490b5465463",
)